Fix issue with keyboard on mobile

--- a/src/components/News/index.css
+++ b/src/components/News/index.css
@@ -48,7 +48,7 @@
   border-radius: 0 17px 17px 0;
 }
 
-@media (max-width: 767px) and (orientation: portrait) {
+@media (orientation: portrait), (max-height: 480px) {
   .news {
     min-height: 100px;
   }
